# mealtrack_backend

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  .railwayignore  AGENTS.md  API_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  Dockerfile.railway  Dockerfile.test  Dockerfile.test.dockerignore  IMPLEMENTED_ENDPOINTS.md  MACRO_IMPROVEMENTS.md  PERSISTENCE_FIX.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  api_tests.http  delivery-main-gap.md  docker-compose.yml  docker-entrypoint.sh  ecs-task-definition-simple.json  env.example  google_api_key.env  locustfile.py  mealtrack.db  nixpacks.toml  notification_payload.json  plan.md  pyproject.toml  pytest.ini  railway.json  railway.toml  render.yaml  repomix-backend-audit.xml  (+18 more)
.github/: SECRETS.md  analysis.txt  log.txt
.github/scripts/: ci-lint.sh  ci-security.sh  ci-test.sh  deployment-version.sh  ecr-push.sh  ecs-deploy-ecr.sh
.github/workflows/: ci.yml  deploy-ecs.yml  deploy-railway.yml  docker-build-push.yml  ecr-build-push.yml  ghcr-build-push.yml  ghcr-quick-build.yml  meal-image-resolver.yml  release-pipeline.yml
alembic/versions/: 000_initial_schema.py
api/: dependencies.py  main.py
api/mappers/: __init__.py  activity_mapper.py  ingredient_mapper.py  meal_mapper.py
api/schemas/: __init__.py  activity_dtos.py  activity_schemas.py  base.py  food_schemas.py  ingredient_dtos.py  ingredient_schemas.py  macros_dtos.py  macros_schemas.py  meal_dtos.py  meal_response.py  meal_schemas.py  onboarding_dtos.py  onboarding_schemas.py
app/handlers/: activities_handler.py  enrich_nutrition_handler.py  meal_handler.py  upload_meal_image_handler.py
app/jobs/: analyse_meal_image_job.py  enrich_nutrition_job.py
app/models/: __init__.py  common.py
app/services/: analysis_strategy.py  ingredient_extraction_service.py  meal_ingredient_service.py  nutrition_service.py
demos/: meal_plan_chatbot_demo.py  meal_plan_chatbot_ui.py
docs/: DAILY_MEALS_V1_API.md  DAILY_MEALS_V2_API.md  EVENT_DRIVEN_ARCHITECTURE.md  FEATURE_TOGGLE_SPECIFICATION.md  FOOD_DATABASE_SPECIFICATION.md  MEAL_EDIT_FEATURE_SPECIFICATION.md  MEAL_PLANNING_API.md  MEAL_PLANNING_IMPLEMENTATION.md  MEAL_PLANNING_SPEC.md  METRICS_UPDATE_AND_NUTRITION_RECALC_BACKEND.md  MIGRATIONS.md  MOCK_DATA_GUIDE.md  NOTIFICATION_PREFERENCES_BACKEND.md  NOTIFICATION_SETUP_GUIDE.md  PUSH_NOTIFICATIONS_BACKEND_PLAN.md  SCHEDULED_NOTIFICATION_SERVICE.md  SETTINGS_GOAL_PREFERENCE_BACKEND.md  SIMPLE_MACRO_TARGETS.md  TDEE_Implementation.md  TESTING_SETUP.md  USER_DATABASE_SCHEMA.md  USER_SYSTEM_GUIDE.md  api-endpoints.md  api-hydration.md  beverage-scan.md  code-standards.md  codebase-summary-compaction.xml  codebase-summary.md  cqrs-guide.md  database-guide.md  external-services.md  hydration-api-gaps.md  movement-release-readiness.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md  testing-standards.md  troubleshooting.md
docs/architecture/: async-cqrs-feature-alignment.md  core.md  data-flow.md  fitness-goals.md  index.md  infrastructure.md  scaling-plan.md
docs/decisions/: 260608-2223-selective-cache-admission-policy.md
docs/guides/: index.md  meal-analyze-fastpath-rollout.md  meal-suggestions-multilingual.md  neon-to-render-migration.md  render-cd.md
docs/journals/: 260610-async-boundary-hygiene.md  260613-1308-sentry-logs-metrics-profiles-brainstorm.md  260613-1318-sentry-logs-metrics-profiles-implementation.md  260613-1415-llm-nutrition-contracts-phase-1.md  260613-1719-llm-nutrition-contracts-phase-2.md  260613-1749-llm-nutrition-contracts-phase-3.md  260616-2121-ai-rearchitecture-beverage-scan.md  260701-codeql-barcode-logging-redaction.md
docs/specs/: 2026-04-26-integration-tests-design.md  2026-04-27-integration-tests-plan.md  2026-05-01-gemini-resilience-design.md  2026-05-01-gemini-resilience-plan.md  2026-05-06-ai-resilience-multi-provider-design.md  2026-05-09-email-triggers-design.md  2026-05-09-email-triggers-plan.md  2026-05-10-email-deep-links-design.md  2026-05-10-email-deep-links-plan.md  2026-05-15-email-promo-codes-design.md
docs/standards/: db-api.md  index.md  patterns.md  python-style.md  testing.md
docs/superpowers/: SEED_MEAL_IMAGES.md
domain/model/: __init__.py  activity.py  food.py  ingredient.py  macros.py  meal.py  meal_image.py  nutrition.py  onboarding.py  user_macros.py
domain/ports/: __init__.py  food_database_port.py  meal_repository_port.py  vision_ai_service_port.py
domain/services/: analysis_strategy.py  gpt_response_parser.py  nutrition_service.py
infra/adapters/: cloudinary_image_store.py  image_store.py  mock_vision_ai_service.py  usda_food_database.py  vision_ai_service.py
migrations/: README.md  cli.py  env.py  nutree_ai.code-workspace  run.py  utils.py
scripts/: backfill_journey_progress_seed.py  check_schema.py  cleanup_db.py  cleanup_orphaned_meal_images.py  create_fresh_db.py  dev_setup.py  fix_migration_version.py  fix_postgres_sequences.py  import_food_seeds.py  init_postgres_db.py  local.sh  migrate.sh  migrate_mysql_to_postgres.py  migration.load  populate_mock_data.py  populate_recipe_index.py  preload_usda_food_reference.py  quick_test_users.py  railway_migrate.py  railway_start.py  recreate_pinecone_indexes.py  reset_database.py  resolve_pending_images.py  rollback_meal_edit_migration.py  run_tests.py  seed_demo_data.py  seed_demo_db.py  seed_demo_meal_types.py  seed_demo_meals.py  seed_demo_meals_early.py  seed_demo_meals_late.py  seed_demo_user.py  seed_meal_images.py  send_test_email.py  send_winback_promo.py  setup_db.py  setup_test_db.py  stop-local.sh  sync_resend_templates.py  test_db_path.py  (+2 more)
src/: observability.py  observability_connectors.py
testdata/: test_meal_edit.sh
tests/: README.md  conftest.py  download_test_image.py  test_api_endpoints.py  test_curl_upload.sh  test_daily_meals_v2.py  test_meal_planning.py  test_meal_upload.py  test_meal_upload_real.py  test_performance.py  test_setup.py  test_tdee_endpoint.py  test_validation.py
(+1962 files in other folders)
