[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealtrack_backend"
version = "0.1.0"
description = "Backend for the MealTrack application"
readme = "README.md"
requires-python = ">=3.8,<3.14"

[project.optional-dependencies]
dev = ["import-linter>=2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    # Development and testing utilities
    "src/api/middleware/dev_auth_bypass.py",
    # Database infrastructure
    "src/infra/database/migration_manager.py",
    "src/infra/database/uow.py",
    # External service integrations
    "src/infra/services/firebase_service.py",
    "src/infra/services/pinecone_service.py",
    "src/infra/services/scheduled_notification_service.py",
    "src/infra/services/firebase_auth_service.py",
    "src/infra/services/ai/openai_chat_service.py",
    "src/infra/websocket/connection_manager.py",
    # Standard exclusions
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2 

[tool.importlinter]
root_packages = ["src"]

[[tool.importlinter.contracts]]
name = "Domain has no external I/O dependencies"
type = "forbidden"
source_modules = ["src.domain"]
forbidden_modules = [
    "src.infra",
    "src.app",
    "src.api",
    "httpx",
    "sqlalchemy",
    "redis",
    "firebase_admin",
]

[[tool.importlinter.contracts]]
name = "App layer does not import infra directly"
type = "forbidden"
source_modules = ["src.app"]
forbidden_modules = ["src.infra"]

[[tool.importlinter.contracts]]
name = "Infra does not import app or api"
type = "forbidden"
source_modules = ["src.infra"]
forbidden_modules = ["src.app", "src.api"]

[[tool.importlinter.contracts]]
name = "API does not import infra directly"
type = "forbidden"
source_modules = ["src.api"]
forbidden_modules = ["src.infra"]
ignore_imports = [
    "src.api.dependencies -> src.infra",
    "src.api.main -> src.infra",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
