[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealtrack_backend"
version = "0.1.0"
description = "Backend for the MealTrack application"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "uvloop>=0.19.0",
    "pydantic[email]>=2.7.4",
    "python-multipart>=0.0.19",
    "langchain-core>=0.1.0",
    "langchain-google-genai",
    "google-genai",
    "posthog[otel]>=3.0.0",
    "opentelemetry-instrumentation-langchain>=0.1.0",
    "pgvector>=0.3.6",
    "cloudinary==1.37.0",
    "requests==2.32.4",
    "httpx>=0.27.0",
    "pillow>=11.0.0",
    "sqlalchemy==2.0.41",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "alembic==1.14.0",
    "python-dotenv==1.0.0",
    "pydantic-settings>=2.11.0",
    "pymediator==0.3.0",
    "firebase-admin>=6.0.0,<7.0.0",
    "cachetools>=5.3.0",
    "redis>=5.0.0",
    "redis[hiredis]>=5.0.0",
    "fatsecret",
    "deepl>=1.18.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.18.0",
    "resend>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["import-linter>=2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    # Development and testing utilities
    "src/api/middleware/dev_auth_bypass.py",
    # No-logic DTOs / models (exclude from coverage gate)
    "src/api/schemas/*",
    "src/api/schemas/**",
    "src/domain/model/*",
    "src/domain/model/**",
    "src/infra/database/models/*",
    "src/infra/database/models/**",
    # Database infrastructure
    "src/infra/database/migration_manager.py",
    "src/infra/database/uow.py",
    # External service integrations
    "src/infra/services/cron_lifecycle_email_service.py",
    "src/infra/services/cron_notification_dispatch_service.py",
    "src/infra/services/cron_trial_push_service.py",
    "src/infra/services/firebase_service.py",
    "src/infra/services/pinecone_service.py",
    "src/infra/services/firebase_auth_service.py",
    "src/infra/services/ai/openai_chat_service.py",
    "src/infra/websocket/connection_manager.py",
    # Operational infrastructure (batch jobs, health checks)
    "src/infra/services/daily_context_precompute_service.py",
    "src/api/routes/v1/health.py",
    "src/api/dependencies/meal_image_cache.py",
    # Standard exclusions
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

# import-linter contracts live in ./.importlinter (import-linter reads it in
# preference to this file). Run `lint-imports` — also a CI step — to check the
# architecture boundaries. NOTE: every package dir under src/ must contain an
# __init__.py, or grimp drops it from the graph and contracts pass as false-greens.

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (main.py loads dotenv first)
    "B008",   # function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.7.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
    "respx>=0.20.0",
    "coverage[toml]>=7.3.0",
    "import-linter>=2.0",
]
