[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealtrack_backend"
version = "0.1.0"
description = "Backend for the MealTrack application"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "uvloop==0.22.1",
    "pydantic[email]==2.13.4",
    "python-multipart==0.0.32",
    "langchain-core==1.4.7",
    "langchain-cloudflare>=0.3.4",
    "langchain-google-genai==4.2.5",
    "google-genai==2.8.0",
    "posthog[otel]==7.18.3",
    "opentelemetry-instrumentation-langchain==0.61.0",
    "pgvector==0.4.2",
    "cloudinary==1.44.2",
    "requests==2.34.2",
    "httpx==0.28.1",
    "openai>=2.14.0,<3.0.0",
    "pillow==12.2.0",
    "sqlalchemy==2.0.50",
    "psycopg2-binary==2.9.12",
    "asyncpg==0.31.0",
    "greenlet==3.5.1",
    "alembic==1.18.4",
    "python-dotenv==1.2.2",
    "pydantic-settings==2.14.2",
    "pymediator==0.3.0",
    "firebase-admin==6.9.0",
    "cachetools==7.1.4",
    "redis[hiredis]==8.0.0",
    "deepl==1.30.0",
    "slowapi==0.1.10",
    "sentry-sdk[fastapi]==2.62.0",
    "resend==2.30.1",
    "jinja2==3.1.6",
    "langchain-openai>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
dev = ["import-linter>=2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    # Development and testing utilities
    "src/api/middleware/dev_auth_bypass.py",
    # No-logic DTOs / models (exclude from coverage gate)
    "src/api/schemas/*",
    "src/api/schemas/**",
    "src/domain/model/*",
    "src/domain/model/**",
    "src/infra/database/models/*",
    "src/infra/database/models/**",
    # Database infrastructure
    "src/infra/database/migration_manager.py",
    "src/infra/database/uow_async.py",
    # External service integrations
    "src/infra/services/cron_lifecycle_email_service.py",
    "src/infra/services/cron_notification_dispatch_service.py",
    "src/infra/services/cron_trial_push_service.py",
    "src/infra/services/firebase_service.py",
    "src/infra/services/pinecone_service.py",
    "src/infra/services/firebase_auth_service.py",
    "src/infra/services/ai/openai_chat_service.py",
    "src/infra/websocket/connection_manager.py",
    # Operational infrastructure (batch jobs, health checks)
    "src/infra/services/daily_context_precompute_service.py",
    "src/api/routes/v1/health.py",
    # Standard exclusions
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

# import-linter contracts live in ./.importlinter (import-linter reads it in
# preference to this file). Run `lint-imports` — also a CI step — to check the
# architecture boundaries. NOTE: every package dir under src/ must contain an
# __init__.py, or grimp drops it from the graph and contracts pass as false-greens.

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (main.py loads dotenv first)
    "B008",   # function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.17",
    "black==26.5.1",
    "isort==8.0.1",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "bandit==1.9.4",
    "safety==3.8.1",
    "factory-boy==3.3.3",
    "faker==40.23.0",
    "respx==0.23.1",
    "coverage[toml]==7.14.1",
    "import-linter==2.11",
]
